# generated-terrain-godot

./: Cargo.toml  readme.md
.cargo/: config.toml
godot/: .gitignore  Terrain.gdns  Terrain.tscn  project.godot  terraingen.gdnlib
godot/addons/rust_nodes/: BasicTerrain.gdns  FlatTerrain.gdns  plugin.cfg  plugin.gd
godot/scenes/: Showcase.tscn  Terrain.tscn
godot/scripts/: CameraController.gdns  Terrain.gdns
src/: camera.rs  lib.rs
src/generators/: basic.rs  flat.rs  mod.rs
src/math/: common.rs
