[package]
name = "terrgen"
version = "0.1.0"
edition = "2021"
authors = ["Mimea005"]
description = "Procedural terrain generators for godot"
categories = ["game-development"]
repository = "https://github.com/Mimea005/generated-terrain-godot"
readme = "readme.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.10"
gdextras = {version = "0.2", git = "https://github.com/Mimea005/gdextras.git"}
num-traits = "0.2"
rand = { version = "0.8.5", features = ["small_rng"] }
